--- a/Libft_pipex/Makefile
+++ b/Libft_pipex/Makefile
@@ -6,7 +6,7 @@
 #    By: jnauroy <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/08 17:50:29 by jnauroy           #+#    #+#              #
-#    Updated: 2024/10/25 15:07:39 by jnauroy          ###   ########.fr        #
+#    Updated: 2025/02/19 09:39:12 by jnauroy          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,23 +46,19 @@ MY_SOURCES = ft_bzero.c \
 			 ft_putstr_fd.c \
 			 ft_putendl_fd.c \
 			 ft_putnbr_fd.c \
+			 ft_lstnew_bonus.c \
+			 ft_lstsize_bonus.c \
+			 ft_lstadd_front_bonus.c \
+			 ft_lstlast_bonus.c \
+			 ft_lstadd_back_bonus.c \
+			 ft_lstdelone_bonus.c \
+			 ft_lstiter_bonus.c \
 
 HEADER = libft.h
 
-BONUS_SOURCES = ft_lstnew_bonus.c \
-				ft_lstsize_bonus.c \
-				ft_lstadd_front_bonus.c \
-				ft_lstlast_bonus.c \
-				ft_lstadd_back_bonus.c \
-				ft_lstdelone_bonus.c \
-				ft_lstclear_bonus.c \
-				ft_lstiter_bonus.c \
-				ft_lstmap_bonus.c \
-
 MY_OBJECTS = $(MY_SOURCES:.c=.o)
-BONUS_OBJECTS = $(BONUS_SOURCES:.c=.o)
 
-CFLAGS += -Wall -Wextra -Werror
+CFLAGS += -Wall -Wextra -Werror -g
 AR = ar -rcs
 
 all: $(NAME)
@@ -70,13 +66,10 @@ all: $(NAME)
 $(NAME): $(MY_OBJECTS)
 	$(AR) $(NAME) $(MY_OBJECTS) -o $(NAME)
 
-bonus: $(BONUS_OBJECTS)
-	$(AR) $(NAME) $(BONUS_OBJECTS) -o $(NAME)
-
 clean:
 	rm -f $(MY_OBJECTS)
 fclean: clean
-	rm -f $(NAME) $(BONUS_NAME)
+	rm -f $(NAME)
 re: fclean all
 
 .PHONY: all clean fclean re bonus
